--- a/dream-generator/src/main/resources/vm/java/domain.java.vm
+++ b/dream-generator/src/main/resources/vm/java/domain.java.vm
@@ -3,6 +3,7 @@ package ${packageName}.domain;
 #foreach ($import in $importList)
 import ${import};
 #end
+import com.dream.common.core.domain.BaseEntity;
 import org.apache.commons.lang3.builder.ToStringBuilder;
 import org.apache.commons.lang3.builder.ToStringStyle;
 import com.dream.common.annotation.Excel;
